<resources>
    <string name="app_name">Cube Timer</string>
    <string name="mo3">Mo3</string>
    <string name="ao5">Ao5</string>
    <string name="ao12">Ao12</string>
    <string name="current">current</string>
    <string name="time">Time</string>
    <string name="best">best</string>
    <string name="sample_4x4_scramble">F2 L2 D B2 F2 L2 D R2 B2 L2 U2 F2 L\' B D\' L2 B\' D2 F R D2 Uw2 Fw2 R\' U2 B\' L B\' Rw2 F\' Rw2 Fw2 F2 Uw B2 Rw2 U2 R\' Fw F2 R\' D Rw B2 Rw2</string>
    <string name="_3x3">3x3</string>
    <string name="_4x4">4x4</string>
    <string name="_5x5">5x5</string>
    <string name="timer_place_holder">00.000</string>
    <string name="delete_icon">Delete icon</string>
    <string name="no">No.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="bottom_sheet_behavior" translatable="false">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="graph">Graph</string>
    <string name="nudge_icon">nudge icon</string>
</resources>
